# substrace

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain
.cargo/: config.toml
.github/: driver.sh
.github/workflows/: auto_release.yml  build_test_clippy.yml  ci.yml  clippy.yml  clippy_bors.yml
.rust-analyzer/rust-analyzer-check/: .rustc_info.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/aho-corasick-e040b2a55ce03cfe/: lib-aho_corasick  lib-aho_corasick.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/ansi_term-ea6913e3a9926d4e/: lib-ansi_term  lib-ansi_term.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/anyhow-13164183d1e18ffb/: run-build-script-build-script-build  run-build-script-build-script-build.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/anyhow-43ec768d49bb7d7d/: lib-anyhow  lib-anyhow.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/anyhow-e121b252a67cdf7a/: build-script-build-script-build  build-script-build-script-build.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/atty-83671849410685d0/: lib-atty  lib-atty.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/bitflags-f75283d3dcd3daad/: lib-bitflags  lib-bitflags.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/camino-3cad2868b251e379/: run-build-script-build-script-build  run-build-script-build-script-build.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/camino-62addc7c51aee7d0/: lib-camino  lib-camino.json
.rust-analyzer/rust-analyzer-check/debug/.fingerprint/camino-eb157fc7d6ca0c1f/: build-script-build-script-build  build-script-build-script-build.json
book/src/: README.md
book/src/development/: adding_lints.md
clippy_dev/src/: lib.rs  lint.rs  main.rs  new_lint.rs  serve.rs  update_lints.rs
clippy_dev/src/setup/: intellij.rs
declare_substrace_lint/: Cargo.toml
lintcheck/: lintcheck_crates.toml
lintcheck-logs/: lintcheck_crates_desired.txt  lintcheck_crates_logs.txt
lintcheck/src/: config.rs  main.rs
src/: docs.rs  driver.rs  lib.rs  main.rs  paths.rs
src/linters/: missing_security_doc.rs  mod.rs  no_panics.rs  storage_iter_insert.rs
substrace_declare_lint/: Cargo.toml
substrace_declare_lint/src/: lib.rs
substrace_lintcheck/: Cargo.toml  README.md  lintcheck_crates.toml
substrace_lintcheck/src/: config.rs  driver.rs  main.rs  recursive.rs
substrace_lints/: Cargo.toml  README.md
substrace_lints/src/: lib.deprecated.rs  lib.register_all.rs  lib.register_cargo.rs  lib.register_complexity.rs  lib.register_correctness.rs  lib.register_lints.rs  lib.register_nursery.rs  lib.register_pedantic.rs  lib.register_perf.rs  lib.register_restriction.rs  lib.register_style.rs  lib.register_suspicious.rs  lib.rs  renamed_lints.rs
substrace_lints/src/substrace_lints/: enable_singlepass_benchmarks.rs  extrinsics_must_be_tagged.rs  missing_security_doc.rs  missing_transactional.rs  mod.rs  no_panics.rs  output.jsonl  storage_iter_insert.rs
substrace_lints/src/substrace_lints/auxiliary/: paths.rs
substrace_lints/src/utils/: author.rs  conf.rs  dump_hir.rs  internal_lints.rs
substrace_utils/: Cargo.toml
substrace_utils/src/: attrs.rs  check_proc_macro.rs  diagnostics.rs  lib.rs  paths.rs  qualify_min_const_fn.rs  source.rs  str_utils.rs  ty.rs
tests/: compile-test.rs  dogfood.rs  versioncheck.rs
tests/integration/: testtest.sh
tests/test_utils/: mod.rs
tests/ui/: deprecated.rs  enable_singlepass_benchmarks.rs  enable_singlepass_benchmarks.stderr  find_pallet.rs  find_pallet.stderr  missing_security_doc.rs  missing_security_doc.stderr  missing_transactional.rs  no_panics.rs  no_panics_fail.rs  no_panics_fail.stderr  rename.rs  storage_insert_iterable_storage_map.rs  storage_insert_iterable_storage_map.stderr
tests/ui-internal/: collapsible_span_lint_calls.fixed  collapsible_span_lint_calls.rs  custom_ice_message.rs  custom_ice_message.stderr  default_deprecation_reason.rs  invalid_msrv_attr_impl.fixed  invalid_msrv_attr_impl.rs  match_type_on_diag_item.rs  match_type_on_diag_item.stderr
tests/ui/auxiliary/: frame-support.rs
ui/: missing_security_doc.rs  missing_security_doc.stderr  no_panics.rs  no_panics_fail.stderr  storage_insert_iterable_storage_map.rs  storage_insert_iterable_storage_map.stderr
ui/auxiliary/: frame-support.rs
util/etc/: pre-commit.sh
util/gh-pages/: index.html
workflows/: build_test_clippy.yml
(+202 files in other folders)
