[package]
name = "substrace_lints"
version = "0.2.0"
description = "Subcrate that hosts the actual substrace lints"
repository = "https://github.com/KaiserKarel/substrace"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["substrace", "lint", "plugin"]
edition = "2021"

[dependencies]
cargo_metadata = "0.14"
substrace_utils = { path = "../substrace_utils" }
enumset = "1.0.8"
if_chain = "1.0"
itertools = "0.10.1"
pulldown-cmark = { version = "0.9", default-features = false }
quine-mc_cluskey = "0.2"
regex-syntax = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tempfile = { version = "3.3.0", optional = true }
toml = "0.5"
unicode-normalization = "0.1"
unicode-script = { version = "0.5", default-features = false }
semver = "1.0"
rustc-semver = "1.1"
# NOTE: cargo requires serde feat in its url dep
# see <https://github.com/rust-lang/rust/pull/63587#issuecomment-522343864>
url = { version = "2.2", features = ["serde"] }

[features]
deny-warnings = ["substrace_utils/deny-warnings"]
# build substrace with internal lints enabled, off by default
internal = ["substrace_utils/internal", "serde_json", "tempfile"]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
